--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "serverless-plugin-scripts": "^1.0.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
